--- a/.graphqlconfig.yml
+++ b/.graphqlconfig.yml
@@ -1,6 +1,6 @@
 projects:
   awsteamsafe:
-    schemaPath: src/graphql/schema.json
+    schemaPath: amplify/backend/api/awsteamsafe/build/schema.graphql
     includes:
       - src/graphql/**/*.js
     excludes:
