fix build issues

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -39,7 +39,12 @@
 			}
 		}
 	},
-	"analytics": {},
+	"analytics": {
+		"awsteamsafe": {
+			"service": "Pinpoint",
+			"providerPlugin": "awscloudformation"
+		}
+	},
 	"notifications": {
 		"awsteamsafe": {
 			"service": "Pinpoint",
