--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-amplify/pushnotification": "^3.1.6",
     "@aws-amplify/ui-react": "^0.2.9",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "aws-amplify": "^3.0.18",
+    "aws-amplify": "^3.0.20",
     "json-loader": "^0.5.7",
     "react": "^16.13.1",
     "react-calendar": "^3.1.0",
