fix build issues

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -39,12 +39,7 @@
 			}
 		}
 	},
-	"analytics": {
-		"awsteamsafe": {
-			"service": "Pinpoint",
-			"providerPlugin": "awscloudformation"
-		}
-	},
+	"analytics": {},
 	"function": {
 		"phoneFormFunction": {
 			"build": true,
