--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -50,6 +50,35 @@
 			"build": true,
 			"providerPlugin": "awscloudformation",
 			"service": "Lambda"
+		},
+		"resendFunction": {
+			"build": true,
+			"providerPlugin": "awscloudformation",
+			"service": "Lambda",
+			"dependsOn": [
+				{
+					"category": "auth",
+					"resourceName": "awsteamsafefcd90582fcd90582",
+					"attributes": [
+						"UserPoolId"
+					]
+				},
+				{
+					"category": "api",
+					"resourceName": "awsteamsafe",
+					"attributes": [
+						"GraphQLAPIIdOutput",
+						"GraphQLAPIEndpointOutput"
+					]
+				},
+				{
+					"category": "function",
+					"resourceName": "sendSmsEventFunction",
+					"attributes": [
+						"Name"
+					]
+				}
+			]
 		}
 	}
 }
