--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "aws-amplify": "^3.0.20",
+    "aws-amplify-react": "^4.1.21",
     "json-loader": "^0.5.7",
     "react": "^16.13.1",
     "react-calendar": "^3.1.0",
